Update background color in manifest.json
Changed background color from dark to light.

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "index.html",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#0f172a",
+  "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "description": "Offline-ready IPF Technical Rules mock exams.",
   "icons": [
